# rag-example

./: .env.example  Dockerfile  README.md  docker-compose.yml  evaluation_report.json  pyproject.toml  requirements.txt
data/cache/: llm_cache.db
data/processed/: index.faiss  index.pkl
docs/: 2023-llmbc-agents-chase.pptx
src/: config.py
src/api/: main.py
src/data/: data_loader.py  embeddings.py
src/eval/: evaluation.py
src/helper/: utils.py
src/models/: agent.py  prompt.py  rag.py  reranker.py  schemas.py
